<resources>
    <string name="app_name">TravelMate</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="registration_check">Not registered yet?</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="three_vertical_dot">&#8942;</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="api_key_weather">a82c27f9a90c855b35b2153afd2a9b4e</string>
    <string name="api_key_weather2">0d9817ad18d48793604e4de209daa091</string>
    <string name="api_key_weather3">463a0dcbbf763f175ad2d0ae48787dfe</string>
    <string name="api_key_nearby">AIzaSyBz0QzCaukHIGO765nkfp7BqEQsPo39Ufo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
