<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_soft"
    tools:context=".RegisterFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/registration_soft"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="#fff"
                android:layout_marginBottom="30dp"
                android:textSize="32sp"/>
            <EditText
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/ic_account"
                android:drawablePadding="10dp"
                android:id="@+id/name_et_fr"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="#fff"
                android:textColorHint="#a6ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:id="@+id/email_et_fr"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                android:textColorHint="#a6ffffff"
                android:layout_width="match_parent"
                android:textColor="#fff"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:id="@+id/phone_et_fr"
                android:inputType="number"
                android:hint="@string/phone"
                android:textColor="#fff"
                android:textColorHint="#a6ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:id="@+id/password_et_fr"
                android:hint="@string/password"
                android:textColor="#fff"
                android:textColorHint="#a6ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:background="@drawable/button_background_1"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="17dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/register_bt_fr"
                android:text="@string/register"
                />
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="40dp"
                android:id="@+id/loading_gif_rf"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_logo"
                android:visibility="gone"
                android:layout_height="40dp" />

        </LinearLayout>

    </ScrollView>

    <!-- TODO: Update blank fragment layout -->


</LinearLayout>