<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_soft"
    tools:context=".LoginFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Welcome Back"
                android:textColor="#fff"
                android:textSize="32dp"/>
            <ImageView
                android:layout_marginTop="10dp"
                android:id="@+id/icon_img_lf"
                android:src="@drawable/ic_flight"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"/>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:background="@drawable/registration_soft"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/ic_mail"
                    android:drawablePadding="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#a6ffffff"
                    android:textColor="#fff"
                    android:id="@+id/email_et_lf"/>
                <EditText
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="#a6ffffff"
                    android:textColor="#fff"
                    android:inputType="textPassword"
                    android:id="@+id/password_et_lf"/>
                <Button
                        android:textColor="#fff"
                        android:textSize="17dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_background_1"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:visibility="visible"
                        android:id="@+id/login_bt_lf"
                        android:layout_marginBottom="10dp"/>
                <pl.droidsonroids.gif.GifImageView
                        android:id="@+id/loading_login_img_lf"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:visibility="gone"
                        android:src="@drawable/ic_logo"/>

                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:textColor="#fff"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_check"/>
                <Button
                    android:textSize="17dp"
                    android:textColor="#fff"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background_1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sign_up_bt_lf"
                    android:layout_marginBottom="20dp"
                    android:text="@string/sign_up"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/result_tv_lf"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>